build(ui): move fonts from public to assets dir

--- a/ui/assets/fonts/fonts.css
+++ b/ui/assets/fonts/fonts.css
@@ -16,7 +16,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 300;
-  src: url("./Roboto-Light.woff2") format("woff2");
+  src: url("/fonts/Roboto-Light.woff2") format("woff2");
 }
 
 @font-face {
